--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "crypsty-api",
-  "version": "0.0.1",
+  "name": "cryptsy-api",
+  "version": "0.0.2",
   "description": "cryptsy.com API client for node.js",
   "keywords": [
     "btc",
@@ -17,14 +17,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/nothingisdead/crypsty-api"
+    "url": "https://github.com/nothingisdead/npm-crypsty-api"
   },
   "main": "crypsty.js",
   "engines": {
     "node": ">=0.10"
   },
   "bugs": {
-    "url": "https://github.com/nothingisdead/crypsty-api/issues",
+    "url": "https://github.com/nothingisdead/npm-crypsty-api/issues",
     "email": "rbmyr8@gmail.com"
   },
   "readmeFilename": "README.md"
