--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "querystring": "0.2.0",
-    "request": "2.21.0"
+    "querystring": ">=0.2.0",
+    "request": ">=2.21.0"
   },
   "repository": {
     "type": "git",
